--- a/website/static/index.html
+++ b/website/static/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"><head>
-	<title> Example </title>
+	<title> index </title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">  
 	<script type="text/javascript" src="vendor/bootstrap.js"></script>
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="vendor/font-awesome.css">
  	<link rel="stylesheet" href="./styles/index.css">
+   <meta name="description" content="fullPage fixed full-screen backgrounds." />
 </head>
 <body >
   <header>
@@ -40,29 +41,26 @@
       </div>
     </div>
   </header>
-  <div class="container_middle">
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <img class="penguin"src="./images/penguin_pexel_heart.png" alt="">
-          <img class="penguin" src="./images/stageforpenguin.jpg" alt="">
+  <div id="fullpage" class="container">
+    <div class="section" id="section0">
+        <div class="intro">
+          <h6>WELCOM TO PEBBLE MATCH</h6>
+          <h6>FIND YOUR PERFECT MATCH TODAY</h2>
         </div>
-        <div class="col">
-          <img class="penguin" src="./images/pixel_effet.png" alt="">
-          <img class="penguin" src="./images/stageforpenguin.jpg" alt="">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-12">
-          <p>Welcome to Pebble Match </p>
-        </div>
-        <div class="col-lg-12">
-          <p>Find your perfect match Today </p>
-        </div>
-      </div>
     </div>
-  </div>
-  <footer style="display: flex; justify-content: center; bottom: 0;">
+    <div class="section fp-auto-height" id="section1">
+      <button type="button" class="btn btn-outline-dark">START</button>
+    </div>
+    <div class="section fp-auto-height" id="section2">
+        <div class="penguin_photo">
+          <img class="penguin" src="./images/penguin_pexel_heart.png" alt="">
+          <img class="penguin" src="./images/stageforpenguin.jpg" alt="">
+
+          
+        </div>
+    </div>
+</div>
+  <footer>
     <hr>
     <p>Projet porfolio MiaChong</p>
   </footer>
