--- a/website/static/index.html
+++ b/website/static/index.html
@@ -16,8 +16,7 @@
   <header>
     <div class="container_top">
       <div class="logo_name">
-        <img class="images_logo" src="./images/Logo.png" alt="">
-        <p>PEBBLE MATCH</p>
+        <img class="images_logo" src="./images/ceur-logo.png" alt="">
       </div>
       <div class="nav_bar_menu">
         <nav>
