--- a/website/static/index.html
+++ b/website/static/index.html
@@ -33,7 +33,7 @@
           <li> <a href="#"> Start</a>
           </li>
           <li>
-          <a href="#">Login</a>
+          <a href="login.html">Login</a>
           </li>
           </ul>
           </nav>
