update homepagewith new logo

--- a/website/static/styles/about.html
+++ b/website/static/styles/about.html
@@ -22,7 +22,7 @@
   <header>
     <div class="container_top">
       <div class="logo_name">
-        <img class="images_logo" src="../static/images/homepage_logo_update.jpg" alt="logo-bebbe">
+        <img class="images_logo" src="../static/images/ceur-logo.png" alt="logo-bebbe">
       </div>
       <div class="nav_bar_menu">
         <nav>
@@ -51,7 +51,7 @@
         </p>
       </div>
       <div class="penguin_photo">
-        <img class="penguin" src="../static/images/Home_page_penguins.png" alt="logo-chimcanhcut">
+        <img class="penguin" src="../static/images/" alt="">
       </div>
     </div>
   </div>
