update logo about page

--- a/website/static/styles/about.html
+++ b/website/static/styles/about.html
@@ -22,7 +22,7 @@
      <header>
           <div class="container_top">
                <div class="logo_name">
-                    <img class="images_logo" src="../static/images/homepage_logo_update.jpg" alt="logo-bebbe">
+                    <img class="images_logo" src="../images/logo.png" alt="logo-bebbe">
                </div>
                <div class="nav_bar_menu">
                     <nav>
